--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Submission</title>
-</head>
-<body>
-    <h1>Submit Your Email</h1>
-    <form id="emailForm">
-        <input type="email" id="email" required>
-        <input type="hidden" id="token" name="token">
-        <button type="submit">Submit</button>
-    </form>
-    <script>
-        document.getElementById('emailForm').onsubmit = async (e) => {
-            e.preventDefault();
-            const email = document.getElementById('email').value;
-            const token = document.getElementById('token').value;
-            alert(`Email: ${email}, Token: ${token}`);
-            // We'll add actual submission logic later
-        };
-        
-        // Set token from URL
-        const urlParams = new URLSearchParams(window.location.search);
-        document.getElementById('token').value = urlParams.get('token');
-    </script>
-</body>
-</html> 
+<script>
+    document.getElementById('emailForm').onsubmit = async (e) => {
+        e.preventDefault();
+        const email = document.getElementById('email').value;
+        const token = document.getElementById('token').value;
+        try {
+            const response = await fetch('/.netlify/functions/submit-email', {
+                method: 'POST',
+                body: JSON.stringify({email, token}),
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            });
+            if (response.ok) {
+                const result = await response.json();
+                alert(result.message);
+            } else {
+                throw new Error('Server response was not ok.');
+            }
+        } catch (error) {
+            console.error('Error:', error);
+            alert('Error submitting email. Please try again.');
+        }
+    };
+    
+    // Set token from URL
+    const urlParams = new URLSearchParams(window.location.search);
+    document.getElementById('token').value = urlParams.get('token');
+</script>
