Update form submission to use serverless function

--- a/index.html
+++ b/index.html
@@ -27,3 +27,5 @@
     const urlParams = new URLSearchParams(window.location.search);
     document.getElementById('token').value = urlParams.get('token');
 </script>
+
+//set the token from parametes
